# OR-Scheduling-Data-Storage-System

./: .env.example  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.claude/: settings.local.json
Assignment/: 01_schema_and_orm.ipynb  02_seed_data.ipynb  03_atomic_operations.ipynb  04_performance_test.ipynb  05_isolation_test.ipynb  06_mongodb_performance.ipynb  07_snowflake_analytics.ipynb  test_nb07.py
Documents/Contexts/: Class_Materials_Summary.md  OR_Scheduling_Blueprint.md
Documents/Plans/: ASSIGNMENT02_PLAN.md  FIX_PLAN_1.md  PLAN_1.md  ROADMAP.md
Documents/Tests/: ASSIGNMENT02_TECHNIQUES.md  Assignment_Requirements.md  TEST02_REPORT.md  TEST_REPORT.md  TEST_TUTORIAL.md
scripts/: init_db.py
src/or_scheduler/: __init__.py  config.py  database.py  mongo_client.py  mongo_operations.py  seed.py
src/or_scheduler/models/: __init__.py  appointment.py  base.py  case.py  department.py  equipment.py  override.py  patient.py  reservation.py  room.py  schedule.py  staff.py
src/or_scheduler/operations/: __init__.py  cancel_appointment.py  complete_appointment.py  create_appointment.py  create_case.py  emergency_override.py  exceptions.py
