[project]
name = "or-scheduler"
version = "0.1.0"
description = "Thai government hospital OR scheduling coordination system"
requires-python = ">=3.10"
dependencies = [
    "sqlalchemy>=2.0",
    "psycopg2-binary",
    "pydantic-settings>=2.0",
    "faker",
    "rich",
    "python-dotenv",
    "pymongo>=4.6",
    "redis[hiredis]>=5.0",
]

[project.optional-dependencies]
dev = [
    "jupyter",
    "ipykernel",
    "nbconvert",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/or_scheduler"]
